--- a/DesignLayout.html
+++ b/DesignLayout.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    Hello
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Classes</title>
+  </head>
+  <body>
+    <div class="header">
+      <img class="icon" src="images/menu.png" />
+      <div class="innerheader">
+        <img class="googlelogo" src="./images/googlelogo.png" alt="Google" />
+      </div>
+      <div>
+        <span class="classroom">Classroom </span>
+      </div>
+      <div>
+        <img class="plus" src="./images/plus.png" alt="add class" />
+      </div>
+    </div>
+   <div class="placement">
+     <p class="placementtext">Can't see any of your existing classes?</p>
+     <a class="placementlink" href="">Try another account</a>
+
+   </div>
+
+
+
+  </body>
 </html>
