--- a/DesignLayout.html
+++ b/DesignLayout.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="header">
-      <img class="icon" src="images/menu.png" />
+      <img class="menu" src="images/menu.png" />
       <div class="innerheader">
         <img class="googlelogo" src="./images/googlelogo.png" alt="Google" />
       </div>
