--- a/DesignLayout.html
+++ b/DesignLayout.html
@@ -1,33 +1,54 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles.css" />
-    <title>Classes</title>
-    <link rel="icon" href="./images/classroom.png" type="image/gif" >
+    <title>Anteiku: Anime merch Store</title>
+    <link rel="icon" href="./images/anteiku.png" type="image/gif" >
+
   </head>
   <body>
-    <div class="header">
-      <img class="menu" src="images/menu.png" />
-      <div class="innerheader">
-        <img class="googlelogo" src="./images/googlelogo.png" alt="Google" />
-      </div>
-      <div>
-        <span class="classroom">Classroom </span>
-      </div>
-      <div>
-        <img class="plus" src="./images/plus.png" alt="add class" />
-      </div>
-    </div>
-   <div class="placement">
-     <p class="placementtext">Can't see any of your existing classes?</p>
-     <a class="placementlink" href="">Try another account</a>
 
-   </div>
+        <div class="header">
+            <a href="filmscore.html">
+                <img class="logo" src="./images/anteiku.png">
+            </a>
+        </div>
 
+        <div id="nevbar">
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#news">Clothing</a></li>
+            <li><a href="#contact">3D Models</a></li>
+            <li><a href="#about">Acessories</a></li>
+          </ul>
+        </div>
+        </div>
 
+        <div class="header" >
+            <div>
+                <img src="./images/akatsuki shirt.jpg">
+                <img src="./images/luffyfig.jpg">
+            </div>
+            <div>
+              <img src="./images/dekukeychain.jpg">
+              <img src="./images/kisamepin.png">
+          </div>
+        </div>
+        <div class="footer">
+          <div>
+              <p>
+                Join us at Social Media
+              </p>
+              <a href="#" class="fa fa-facebook"></a>
+<a href="#" class="fa fa-twitter"></a>
 
-  </body>
+          </div>
+          
+        </div>
+</body>
 </html>
