--- a/DesignLayout.html
+++ b/DesignLayout.html
@@ -14,9 +14,10 @@
   <body>
 
         <div class="header">
-            <a href="filmscore.html">
+            <a href="DesignLayout.html">
                 <img class="logo" src="./images/anteiku.png">
             </a>
+            <p class="title">The #1 Anime <br/>Merch Store</p>
         </div>
 
         <div id="nevbar">
@@ -25,11 +26,13 @@
             <li><a href="#news">Clothing</a></li>
             <li><a href="#contact">3D Models</a></li>
             <li><a href="#about">Acessories</a></li>
+            <li><a  href="#contact">Login</a></li>
+            <li><a class="sigup" href="#about">Signup</a></li>
           </ul>
         </div>
         </div>
 
-        <div class="header" >
+        <div class="content" >
             <div>
                 <img src="./images/akatsuki shirt.jpg">
                 <img src="./images/luffyfig.jpg">
