--- a/DesignLayout.html
+++ b/DesignLayout.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="./images/anteiku.png" type="image/gif" >
 
   </head>
-  <body>
+  <body class="contain">
 
         <div class="header">
             <a href="DesignLayout.html">
@@ -26,8 +26,8 @@
             <li><a href="#news">Clothing</a></li>
             <li><a href="#contact">3D Models</a></li>
             <li><a href="#about">Acessories</a></li>
-            <li><a  href="#contact">Login</a></li>
-            <li><a class="sigup" href="#about">Signup</a></li>
+            <li id="signup"><a  href="#contact">Login</a></li>
+            <li id="signup"><a  href="#about">Signup</a></li>
           </ul>
         </div>
         </div>
@@ -35,12 +35,16 @@
         <div class="content" >
             <div>
                 <img src="./images/akatsuki shirt.jpg">
-                <img src="./images/luffyfig.jpg">
             </div>
             <div>
-              <img src="./images/dekukeychain.jpg">
               <img src="./images/kisamepin.png">
           </div>
+          <div>
+            <img src="./images/luffyfig.jpg">
+        </div>
+        <div>
+          <img src="./images/dekukeychain.jpg">
+        </div>
         </div>
         <div class="footer">
           <div>
