--- a/DesignLayout.html
+++ b/DesignLayout.html
@@ -1,61 +1,71 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="styles.css" />
-    <title>Anteiku: Anime merch Store</title>
-    <link rel="icon" href="./images/anteiku.png" type="image/gif" >
 
-  </head>
-  <body class="contain">
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="styles.css" />
+  <title>Anteiku: Anime merch Store</title>
+  <link rel="icon" href="./images/anteiku.png" type="image/gif">
 
-        <div class="header">
-            <a href="DesignLayout.html">
-                <img class="logo" src="./images/anteiku.png">
-            </a>
-            <p class="title">The #1 Anime <br/>Merch Store</p>
-        </div>
+</head>
 
-        <div id="nevbar">
-          <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#news">Clothing</a></li>
-            <li><a href="#contact">3D Models</a></li>
-            <li><a href="#about">Acessories</a></li>
-            <li id="signup"><a  href="#contact">Login</a></li>
-            <li id="signup"><a  href="#about">Signup</a></li>
-          </ul>
-        </div>
-        </div>
+<body >
 
-        <div class="content" >
-            <div>
-                <img src="./images/akatsuki shirt.jpg">
-            </div>
-            <div>
-              <img src="./images/kisamepin.png">
-          </div>
-          <div>
-            <img src="./images/luffyfig.jpg">
-        </div>
-        <div>
-          <img src="./images/dekukeychain.jpg">
-        </div>
-        </div>
-        <div class="footer">
-          <div>
-              <p>
-                Join us at Social Media
-              </p>
-              <a href="#" class="fa fa-facebook"></a>
-<a href="#" class="fa fa-twitter"></a>
+  <div class="header">
+    <a href="DesignLayout.html">
+      <img class="logo" src="./images/anteiku.png">
+    </a>
+    <p class="title">The #1 Anime <br />Merch Store</p>
+  </div>
 
-          </div>
-          
-        </div>
+  <div id="nevbar">
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#news">Clothing</a></li>
+      <li><a href="#contact">3D Models</a></li>
+      <li><a href="#about">Acessories</a></li>
+      <li id="signup"><a href="#contact">Login</a></li>
+      <li id="signup"><a href="#about">Signup</a></li>
+    </ul>
+  </div>
+  </div>
+
+  <div  class="flex-container">
+    <div >
+      <img src="./images/akatsuki shirt.jpg">
+      <a href="DesignLayout.html"><p class="text">Akatsuki Shirt</p> </a>
+    </div>
+    <div>
+      <img src="./images/kisamepin.png">
+      <a href="DesignLayout.html"><p class="text">Naruto Pin</p> </a>
+    </div>
+  </div>
+    
+  
+  <div class="flex-container" >
+    <div>
+      <img src="./images/luffyfig.jpg">
+    <a href="DesignLayout.html"><p class="text">Luffy Model</p> </a> 
+    </div>
+    <div>
+      <img src="./images/dekukeychain.jpg">
+      <a href="DesignLayout.html"><p class="text">Midoriya KeyChain</p> </a>
+    </div>
+  </div>
+  <div class="footer">
+    <div>
+      <p>
+        Join us at Social Media
+      </p>
+      <a href="#" class="fa fa-facebook"></a>
+      <a href="#" class="fa fa-twitter"></a>
+
+    </div>
+
+  </div>
 </body>
+
 </html>
